# Process this file with automake to create Makefile.in

MAINTAINERCLEANFILES = Makefile.in

EXTRA_DIST = pam_pkcs11.conf.example \
	pam.d_login.example \
	subject_mapping.example \
	mail_mapping.example \
	digest_mapping.example \
	pkcs11_eventmgr.conf.example \
	card_eventmgr.conf.example

doc_DATA = $(EXTRA_DIST)
